@@ -1,3 +1,8 @@
+2014-07-10 Blub
+
+	* database bump: 9
+	* storing ELF interpreter data
+
 2014-05-17 Blub
 
 	* integrity check now goes through package replacements
